SERVER-81312 Allow importing collection with hidden index

GitOrigin-RevId: 36c056e900efa709b673294cf7aa1eba5c4cc063